# Mgolc

./: CMakeLists.txt  CMakeSettings.json  README.md
resources/: test.mgol
src/: CMakeLists.txt  action.cpp  action.h  array2d.h  dfa.h  enum_syntatic.h  except.h  frontend.cpp  frontend.h  goto.cpp  goto.h  grammar.cpp  grammar.h  handler.cpp  handler.h  io.cpp  io.h  lexical_test.h  main.cpp  parser.cpp  parser.h  scanner.cpp  scanner.h  semantic.cpp  semantic.h  symbol.cpp  symbol.h  test_lexical.h  test_syntatic.h  token.cpp  token.h
