add_executable(mgolc "main.cpp" "frontend.cpp" "frontend.h" "io.cpp" "io.h" "handler.cpp" "handler.h" "except.h" "scanner.cpp" "scanner.h" "token.h" "symbol.cpp" "symbol.h" "token.cpp" "test_syntatic.h" "parser.h" "parser.cpp" "grammar.h" "action.h" "action.cpp" "goto.h" "goto.cpp" "array2d.h"  "grammar.cpp")